kennybear is sleepy

--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,9 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/can.js/1.1.3/can.jquery.min.js"></script>
     
-    <script type="text/javascript" src="javascripts/views/app.js"></script>
     <script type="text/javascript" src="javascripts/app.js"></script>
+    <script type="text/javascript" src="//canjs.us/release/latest/can.view.mustache.js"></script>
+    <script type="text/mustache" src="templates/app.mustache" id="app"></script>
     
     <script type="text/javascript">
         $(function() {
